--- a/style.css
+++ b/style.css
@@ -46,6 +46,16 @@ p {
   font-size: 16px;
 }
 
+.resume {
+  text-align: center;
+}
+
+.cv_link {
+  text-align: center;
+  font-size: 30px;
+  color: blue;
+}
+
 .hero {
   background: var(--secondary-color);
   text-align: center;
